--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~11.2.5",
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^4.6.0",
+    "bootswatch": "^4.6.0",
     "firebase": "^8.4.2",
     "jquery": "^3.6.0",
     "rxjs": "~6.6.0",
